--- a/.github/workflows/admin-client.yml
+++ b/.github/workflows/admin-client.yml
@@ -152,77 +152,77 @@ jobs:
   #############################################################################
   # Job 3: Deploy to Production
   #############################################################################
-  deploy-production:
-    name: Deploy to Production
-    runs-on: ubuntu-latest
-    needs: [build-and-push]
-    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-    environment:
-      name: production
-      url: https://admin.deployserver.work
+  # deploy-production:
+  #   name: Deploy to Production
+  #   runs-on: ubuntu-latest
+  #   needs: [build-and-push]
+  #   if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+  #   environment:
+  #     name: production
+  #     url: https://admin.deployserver.work
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Setup SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+  #     - name: Setup SSH
+  #       run: |
+  #         mkdir -p ~/.ssh
+  #         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+  #         chmod 600 ~/.ssh/id_rsa
+  #         ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Deploy admin client to VPS
-        env:
-          SSH_HOST: ${{ secrets.SSH_HOST }}
-          SSH_USER: ${{ secrets.SSH_USER }}
-          SSH_PORT: ${{ secrets.SSH_PORT }}
-        run: |
-          ssh -p ${SSH_PORT} ${SSH_USER}@${SSH_HOST} << 'EOF'
-            set -e
+  #     - name: Deploy admin client to VPS
+  #       env:
+  #         SSH_HOST: ${{ secrets.SSH_HOST }}
+  #         SSH_USER: ${{ secrets.SSH_USER }}
+  #         SSH_PORT: ${{ secrets.SSH_PORT }}
+  #       run: |
+  #         ssh -p ${SSH_PORT} ${SSH_USER}@${SSH_HOST} << 'EOF'
+  #           set -e
             
-            echo "🚀 Starting admin client deployment..."
+  #           echo "🚀 Starting admin client deployment..."
             
-            cd /opt/travelnest
+  #           cd /opt/travelnest
             
-            # Create timestamped release directory
-            TIMESTAMP=$(date +%Y%m%d_%H%M%S)
-            RELEASE_DIR="releases/admin-client/${TIMESTAMP}"
-            mkdir -p "$RELEASE_DIR"
+  #           # Create timestamped release directory
+  #           TIMESTAMP=$(date +%Y%m%d_%H%M%S)
+  #           RELEASE_DIR="releases/admin-client/${TIMESTAMP}"
+  #           mkdir -p "$RELEASE_DIR"
             
-            echo "📦 Pulling latest admin image..."
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/travelnest-admin:latest
+  #           echo "📦 Pulling latest admin image..."
+  #           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/travelnest-admin:latest
             
-            # Extract static files from Docker image
-            echo "📂 Extracting files..."
-            CONTAINER_ID=$(docker create ${{ secrets.DOCKERHUB_USERNAME }}/travelnest-admin:latest)
-            docker cp "$CONTAINER_ID:/usr/share/nginx/html/." "$RELEASE_DIR/"
-            docker rm "$CONTAINER_ID"
+  #           # Extract static files from Docker image
+  #           echo "📂 Extracting files..."
+  #           CONTAINER_ID=$(docker create ${{ secrets.DOCKERHUB_USERNAME }}/travelnest-admin:latest)
+  #           docker cp "$CONTAINER_ID:/usr/share/nginx/html/." "$RELEASE_DIR/"
+  #           docker rm "$CONTAINER_ID"
             
-            # Create symlink to new release
-            echo "🔗 Switching to new version..."
-            rm -f nginx/html/admin/current
-            ln -sf "/opt/travelnest/$RELEASE_DIR" nginx/html/admin/current
+  #           # Create symlink to new release
+  #           echo "🔗 Switching to new version..."
+  #           rm -f nginx/html/admin/current
+  #           ln -sf "/opt/travelnest/$RELEASE_DIR" nginx/html/admin/current
             
-            # Test nginx configuration
-            docker exec travelnest-nginx nginx -t
+  #           # Test nginx configuration
+  #           docker exec travelnest-nginx nginx -t
             
-            # Reload nginx
-            echo "🔄 Reloading nginx..."
-            docker exec travelnest-nginx nginx -s reload
+  #           # Reload nginx
+  #           echo "🔄 Reloading nginx..."
+  #           docker exec travelnest-nginx nginx -s reload
             
-            # Cleanup old releases (keep last 5)
-            echo "🧹 Cleaning up old releases..."
-            cd releases/admin-client
-            ls -t | tail -n +6 | xargs -r rm -rf
+  #           # Cleanup old releases (keep last 5)
+  #           echo "🧹 Cleaning up old releases..."
+  #           cd releases/admin-client
+  #           ls -t | tail -n +6 | xargs -r rm -rf
             
-            echo "✅ Admin client deployment completed!"
-          EOF
+  #           echo "✅ Admin client deployment completed!"
+  #         EOF
 
-      - name: Deployment summary
-        run: |
-          echo "## 🚀 Admin Client Deployed" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Environment:** Production" >> $GITHUB_STEP_SUMMARY
-          echo "**Client:** Admin Client (Nuxt4)" >> $GITHUB_STEP_SUMMARY
-          echo "**URL:** https://admin.deployserver.work" >> $GITHUB_STEP_SUMMARY
+  #     - name: Deployment summary
+  #       run: |
+  #         echo "## 🚀 Admin Client Deployed" >> $GITHUB_STEP_SUMMARY
+  #         echo "" >> $GITHUB_STEP_SUMMARY
+  #         echo "**Environment:** Production" >> $GITHUB_STEP_SUMMARY
+  #         echo "**Client:** Admin Client (Nuxt4)" >> $GITHUB_STEP_SUMMARY
+  #         echo "**URL:** https://admin.deployserver.work" >> $GITHUB_STEP_SUMMARY
